// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filter option should exclude some files 1`] = `
{
  "css": [],
  "js": [],
}
`;

exports[`filter option should include some files 1`] = `
{
  "css": [],
  "js": [
    "vendor/my-file.js",
  ],
}
`;

exports[`filter option should include some files with string option 1`] = `
{
  "css": [],
  "js": [
    "vendor/my-file.js",
  ],
}
`;

exports[`should add file missing "/" to public path 1`] = `
{
  "css": [],
  "js": [
    "vendor/my-file.js",
  ],
}
`;

exports[`should add file using compilation's publicPath 1`] = `
{
  "css": [],
  "js": [
    "vendor/my-file.js",
  ],
}
`;

exports[`should add sourcemap and gzipped files to compilation 1`] = `
{
  "css": [],
  "js": [
    "my-file.js",
  ],
}
`;

exports[`should add to css if \`typeOfAsset\` is css 1`] = `
{
  "css": [
    "my-file.css",
  ],
  "js": [],
}
`;

exports[`should include hash of file content if option is set 1`] = `
{
  "css": [],
  "js": [
    "my-file.js?5329c141291f07ab06c6",
  ],
}
`;

exports[`should invoke callback on error 1`] = `
[
  [Error: No filepath defined],
  [Error: No filepath defined],
]
`;

exports[`should reject on error 1`] = `
[
  [Error: No filepath defined],
  [Error: No filepath defined],
]
`;

exports[`should replace compilation assets key if \`outputPath\` is set 1`] = `
{
  "css": [],
  "js": [
    "some-file.js",
  ],
}
`;

exports[`should skip adding sourcemap and gzipped files to compilation if set to false 1`] = `
{
  "css": [],
  "js": [
    "my-file.js",
  ],
}
`;

exports[`should use the hash from HtmlWebpackPlugin if option is set 1`] = `
{
  "css": [],
  "js": [
    "my-file.js?testHash",
  ],
}
`;

exports[`should used passed in publicPath 1`] = `
{
  "css": [],
  "js": [
    "pp/my-file.js",
  ],
}
`;

exports[`throws of both filepath and glob is defined 1`] = `"Both filepath and glob defined in {"filepath":"my-file.js","glob":"my-file.js"} - only use one of them"`;
